# libtexlink

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: consumer.c  cuda_tex_consumer.c  cuda_tex_producer.c  d3d11_tex_consumer.c  d3d11_tex_producer.c  d3d12_tex_consumer.c  d3d12_tex_producer.c  egl_tex_consumer.c  egl_tex_producer.c  producer.c  simple_consumer.c  simple_producer.c  vulkan_tex_consumer.c  vulkan_tex_producer.c  wgl_tex_consumer.c  wgl_tex_producer.c
include/: dmabuflink.h  texlink.h  texlink_cuda.h  texlink_d3d11.h  texlink_d3d12.h  texlink_egl.h  texlink_vulkan.h  texlink_wgl.h
src/: backend_cuda.c  backend_d3d11.c  backend_d3d12.c  backend_egl.c  backend_vulkan.c  backend_vulkan_internal.h  backend_vulkan_posix.c  backend_vulkan_win32.c  backend_wgl.c  buffer.c  buffer_posix.c  buffer_posix_shm.c  buffer_posix_stub.c  buffer_win32.c  dmabuflink_internal.h  frame_posix.c  frame_posix_shm.c  frame_win32.c  platform_posix.c  platform_win32.c  registry.c  registry_win32.c  session.c  socket.c  socket_posix.c  socket_win32.c  sync.c  sync_posix.c  sync_win32.c  texlink_internal.h  vulkan.c
